--- a/Placemem/app/src/main/res/values/strings.xml
+++ b/Placemem/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">DVA217 Android Project</string>
+    <string name="app_name">Placemem</string>
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
