--- a/Placemem/app/src/main/res/values/strings.xml
+++ b/Placemem/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="action_add">Add mem</string>
+    <string name="action_remove">Remove</string>
 </resources>
