--- a/Placemem/app/src/main/res/values/strings.xml
+++ b/Placemem/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">Placemem</string>
+
+    <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_add_mem">AddMemActivity</string>
+    <string name="title_activity_view_mem">ViewMem</string>
 </resources>
