--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_add_mem">AddMemActivity</string>
     <string name="title_activity_view_mem">ViewMem</string>
+    <string name="search_hint">Search!</string>
+    <string name="search_title">Search</string>
 </resources>
