--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,8 @@
     <string name="title_activity_view_mem">ViewMem</string>
     <string name="search_hint">Search!</string>
     <string name="search_title">Search</string>
+    <string name="location_title">Location</string>
+    <string name="date_title">Date</string>
+    <string name="latitude_title">Lat</string>
+    <string name="save_title">Save</string>
 </resources>
