--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,11 @@
 <resources>
     <string name="app_name">Placemem</string>
 
-    <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_add_mem">AddMemActivity</string>
+    <string name="title_activity_add_mem">New Mem</string>
     <string name="title_activity_view_mem">ViewMem</string>
     <string name="search_hint">Search!</string>
     <string name="search_title">Search</string>
-    <string name="title_activity_trips">TripsActivity</string>
-    <string name="title_activity_add_trip">AddTripActivity</string>
+    <string name="title_activity_trips">Trips</string>
+    <string name="title_activity_add_trip">New Trip</string>
 </resources>
