--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,9 +3,11 @@
 
     <string name="action_settings">Settings</string>
     <string name="title_activity_add_mem">New Mem</string>
-    <string name="title_activity_view_mem">ViewMem</string>
+    <string name="title_activity_view_mem">View Photo</string>
     <string name="search_hint">Search!</string>
     <string name="search_title">Search</string>
     <string name="title_activity_trips">Trips</string>
     <string name="title_activity_add_trip">New Trip</string>
+
+    <string name="hello_world">Hello world!</string>
 </resources>
