--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="search_hint">Search!</string>
     <string name="search_title">Search</string>
     <string name="title_activity_trips">Trips</string>
-    <string name="title_activity_add_trip">New Trip</string>
+    <string name="title_activity_add_trip">New Collection</string>
 
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_trip_slideshow">TripSlideshowActivity</string>
