--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Placemem</string>
 
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">About</string>
     <string name="title_activity_add_mem">New Mem</string>
     <string name="title_activity_view_mem">View Photo</string>
     <string name="search_hint">Search!</string>
@@ -11,4 +11,9 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_trip_slideshow">TripSlideshowActivity</string>
+    <string name="title_activity_about">About</string>
+    <string name="about_title">About</string>
+    <string name="about_subtitle">DVA217  Group 2</string>
+    <string name="about_creators">Mattias Johansson, Leslie Dahlberg, Jonathan Larsson, Erik Liljeqvist, Filip Lagerholm</string>
+
 </resources>
